force-app/main/default/objects/SObject_Mapping__c/SObject_Mapping__c.object-meta.xml
<CustomObject>
    <label>SObject Mapping</label>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObject Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>