force-app/main/default/objects/SObject_Mapping__c/fields/End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL__c</fullName>
    <label>End Point URL</label>
    <type>TextArea</type>
</CustomField>