force-app/main/default/objects/SObject_Mapping__c/fields/Include_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Include_Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicable only for Contact Type</inlineHelpText>
    <label>Include Mailing Address</label>
    <type>Checkbox</type>
</CustomField>