force-app/main/default/objects/SObject_Mapping__c/fields/Include_Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Include_Other_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicable only for Contact type</inlineHelpText>
    <label>Include Other Address</label>
    <type>Checkbox</type>
</CustomField>