force-app/main/default/objects/SObject_Mapping__c/fields/JSON_Sobject_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Sobject_Name__c</fullName>
    <label>JSON Sobject Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>