force-app/main/default/objects/SObject_Mapping__c/fields/Netsuite_Sync_Stage__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sync_Stage__c</fullName>
    <label>Netsuite Sync Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
            </value>
            <value>
                <fullName>Id. Decision Makers</fullName>
            </value>
            <value>
                <fullName>Perception Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <default>true</default>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Identified Decision Makers</fullName>
                <isActive>false</isActive>
                <label>Identified Decision Makers</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <isActive>false</isActive>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
                <isActive>false</isActive>
                <label>Under Evaluation</label>
            </value>
            <value>
                <fullName>Won</fullName>
                <isActive>false</isActive>
                <label>Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>