force-app/main/default/objects/SObject_Mapping__c/fields/Relationship_with_parent__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_parent__c</fullName>
    <label>Relationship with parent</label>
    <type>TextArea</type>
</CustomField>