force-app/main/default/objects/SObject_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>End_Point_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>