force-app/main/default/objects/SObject_Mapping__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>JSON_Sobject_Name__c</columns>
    <columns>Netsuite_Sync_Stage__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>View</label>
</ListView>